--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,14 +16,14 @@ application.secret="E27D^[_<Lpt0vjad]de;3/i;tx3gpRmG4Byof/3nahO/dIo9gbsMWut1w3xg
 #db.default.url="jdbc:h2:mem:play"
 #db.default.logStatements=true
 
-db.chariot.driver=com.mysql.jdbc.Driver
-db.chariot.url="mysql://root:dzt99123@115.28.172.121/chariot"
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="mysql://root:dzt99123@115.28.172.121/chariot"
 
 # Ebean configuration
 # ~~~~~
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
-ebean.chariot="models.*"
+ebean.default="models.*"
 
 # Logger
 # ~~~~~
