--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,4 +39,5 @@ logger.play=INFO
 logger.application=DEBUG
 
 #disable evolutions
-#evolutions.enabled=false
+evolutions.enabled=false
+evolutionplugin=disabled
