--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,4 +43,4 @@ evolutions.enabled=false
 evolutionplugin=disabled
 
 #the file upload dir
-uploadFilePath = "/Users/quanwang06/PartTimeJob/chariot/file_uploaded"
+uploadFilePath = "/file_uploaded"
