--- a/chariot-model/.gitignore
+++ b/chariot-model/.gitignore
@@ -5,16 +5,15 @@ target
 tmp
 .history
 dist
-/app
-/conf
-/public
-/.idea
-/*.iml
-/out
-/.idea_modules
-/.classpath
-/.project
-/RUNNING_PID
-/.settings
+conf
+public
+.idea
+*.iml
+out
+.idea_modules
+.classpath
+.project
+RUNNING_PID
+.settings
 .DS_Store
-/.target
+.target
