--- a/chariot-web/.gitignore
+++ b/chariot-web/.gitignore
@@ -5,17 +5,16 @@ target
 tmp
 .history
 dist
-app
-conf
-public
 .idea
 *.iml
 out
+.DS_Store
+file_uploaded/*
+template/.DS_Store
 .idea_modules
 .classpath
 .project
 RUNNING_PID
 .settings
-.DS_Store
 .target
 template/debug
