--- a/chariot-web/conf/application.conf
+++ b/chariot-web/conf/application.conf
@@ -1,65 +1,36 @@
-# This is the main configuration file for the application.
-# ~~~~~
+# Configuration
 
+application.name=Chariot
+            
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret=">Mk]L7uekHaf3ffZj[@c4:[6Xv3l>^JFLsK8qa:nBToLI60om@?p=DX]w9[H/N@i"
-
-# The application languages
-# ~~~~~
-application.langs="en"
-
-# Global object class
-# ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-# application.global=Global
-
-# Router
-# ~~~~~
-# Define the Router object to use for this application.
-# This router will be looked up first when the application is starting up,
-# so make sure this is the entry point.
-# Furthermore, it's assumed your route file is named properly.
-# So for an application router like `conf/my.application.Router`,
-# you may need to define a router file `my.application.routes`.
-# Default to Routes in the root package (and `conf/routes`)
-# application.router=my.application.Routes
+application.secret="E27D^[_<Lpt0vjad]de;3/i;tx3gpRmG4Byof/3nahO/dIo9gbsMWut1w3xg[>9W"
 
 # Database configuration
-# ~~~~~
+# ~~~~~ 
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
-#
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
-#
-# You can expose this datasource via JNDI if needed (Useful for JPA)
-# db.default.jndiName=DefaultDS
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
+#db.default.logStatements=true
 
-# Evolutions
-# ~~~~~
-# You can disable evolutions if needed
-# evolutionplugin=disabled
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="mysql://root:dzt99123@115.28.172.121/chariot"
 
 # Ebean configuration
 # ~~~~~
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
-#
-# ebean.default="models.*"
+ebean.default="models.*"
 
 # Logger
 # ~~~~~
-# You can also configure logback (http://logback.qos.ch/),
-# by providing an application-logger.xml file in the conf directory.
+# You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 # Root logger:
-logger.root=ERROR
+logger=ERROR
 
 # Logger used by the framework:
 logger.play=INFO
@@ -67,3 +38,6 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+#disable evolutions
+evolutions.enabled=false
+evolutionplugin=disabled
