--- a/chariot-web/conf/application.conf
+++ b/chariot-web/conf/application.conf
@@ -41,3 +41,6 @@ logger.application=DEBUG
 #disable evolutions
 evolutions.enabled=false
 evolutionplugin=disabled
+
+mongodb.uri = "mongodb://115.28.172.121:27017/chariot"
+logger.reactivemongo=INFO
