--- a/chariot-web/conf/application.conf
+++ b/chariot-web/conf/application.conf
@@ -42,5 +42,5 @@ logger.application=DEBUG
 evolutions.enabled=false
 evolutionplugin=disabled
 
-mongodb.uri = "mongodb://115.28.172.121:27017/chariot"
+mongodb.uri = "mongodb://chariot:chariot@115.28.172.121:27017/chariot"
 logger.reactivemongo=INFO
