ebean or mapping underlying sql log

--- a/chariot-admin/conf/application.conf
+++ b/chariot-admin/conf/application.conf
@@ -19,6 +19,10 @@ application.secret="E27D^[_<Lpt0vjad]de;3/i;tx3gpRmG4Byof/3nahO/dIo9gbsMWut1w3xg
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="mysql://root:dzt99123@115.28.172.121/chariot"
 
+# only in admin so far. show sql statement generated in log
+# should be disabled when done
+db.default.logStatements= true
+
 # Ebean configuration
 # ~~~~~
 # You can declare as many Ebean servers as you want.
@@ -37,6 +41,8 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+# ebean connector
+logger.com.jolbox=DEBUG
 
 #disable evolutions
 evolutions.enabled=false
